[gd_scene load_steps=12 format=3 uid="uid://dychawb2cidt4"]

[ext_resource type="Script" path="res://scenes/hazards/icicle.gd" id="1_j0ytf"]
[ext_resource type="Texture2D" uid="uid://djojk0dywx4lu" path="res://assets/hazards/isicle.png" id="1_t5fx2"]
[ext_resource type="PackedScene" uid="uid://d2oevim3g1yy8" path="res://scenes/hazards/hazard.tscn" id="2_7x446"]
[ext_resource type="AudioStream" uid="uid://d22onpviowmh2" path="res://assets/sounds/sfx/glass_warning_1.ogg" id="4_rfhs0"]
[ext_resource type="AudioStream" uid="uid://bvi10syopwoxu" path="res://assets/sounds/sfx/glass_warning_2.ogg" id="5_lt36l"]
[ext_resource type="AudioStream" uid="uid://xg7gkt7d8cpe" path="res://assets/sounds/sfx/icicle_falling.ogg" id="6_7oe03"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ps31s"]
radius = 3.0
height = 38.0

[sub_resource type="Animation" id="Animation_scf20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 220)]
}

[sub_resource type="Animation" id="Animation_1ucof"]
resource_name = "pre_fall"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0349066, 0.0349066, -0.0698132, 0.0698132, -0.10472, 0.10472, -0.174533, 0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 220), Vector2(0, 680)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8gfs"]
_data = {
"RESET": SubResource("Animation_scf20"),
"pre_fall": SubResource("Animation_1ucof")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ahd7w"]
streams_count = 2
stream_0/stream = ExtResource("4_rfhs0")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_lt36l")
stream_1/weight = 1.0

[node name="Icicle" type="Node2D"]
script = ExtResource("1_j0ytf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -44)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_t5fx2")
offset = Vector2(0, 220)

[node name="Hazard" parent="." instance=ExtResource("2_7x446")]
position = Vector2(0, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazard"]
position = Vector2(0, 55)
shape = SubResource("CapsuleShape2D_ps31s")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8gfs")
}

[node name="Timer" type="Timer" parent="."]

[node name="WarningStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ahd7w")
volume_db = -4.707

[node name="WarningSoundTimer" type="Timer" parent="WarningStreamPlayer2D"]
one_shot = true

[node name="FallStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7oe03")
volume_db = 2.066

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="WarningStreamPlayer2D/WarningSoundTimer" to="." method="_on_warning_sound_timer_timeout"]
